[Chromium] Fix compilation with ENABLE_WEB_AUDIO=0 https://bugs.webkit.org/show_bug.cgi?id=75957

Reviewed by Tony Gentilcore.

Revision 104502 broke Chromium compilation for platforms which disable
the Web Audio API. All references to m_audioSourceProvider should be
guarded with the ENABLE(WEB_AUDIO) conditional.

* src/WebMediaPlayerClientImpl.cpp:
(WebKit::WebMediaPlayerClientImpl::load):
(WebKit::WebMediaPlayerClientImpl::loadInternal):


Canonical link: https://commits.webkit.org/92754@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104574 268f45cc-cd09-0410-ab3c-d52691b4dbfc